--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,22 @@
-<!DOCTYPE HTML>
-<html class="full">
+<!DOCTYPE html>
+<html>
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
+    <meta name="robots" content="noarchive">
     <title>jamespredicts.com</title>
+    <link href="https://fonts.googleapis.com/css?family=Monda" rel="stylesheet">
+    <link rel="stylesheet" href="jay.css">
   </head>
   <body>
-    <h1>James has a first prediction</h1>
+    <div>
+     <h1 class="jay1">JAMESPREDICTS.COM</h1>
+      <div class="outerDiv">
+       <img class="photHo" src="nfl.png">
+      </div>
+      <h1 class="jay1">FIRST GUESS...</h1>
+      <h1 class="jay1">MATT WILL NOT WIN FANTASY THIS YEAR.</h1>
+      <h1 class="jay1">CORRECT PREDICTIONS SO FAR: 1/1</h1>
+      <h1 class="jay1">WRONG PREDICTIONS: 0/1</h1>
+    </div>
   </body>
 </html>
