--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <div class="outerDiv">
        <img class="photHo" src="nfl.png">
       </div>
-      <h1 class="jay1">FIRST GUESS...</h1>
+      <h1 class="jay1">FIRST PREDICTION...</h1>
       <h1 class="jay1">MATT WILL NOT WIN FANTASY THIS YEAR.</h1>
       <h1 class="jay1">CORRECT PREDICTIONS SO FAR: 1/1</h1>
       <h1 class="jay1">WRONG PREDICTIONS: 0/1</h1>
